@@ -13,7 +13,7 @@ name		'Math-BigInt-FastCalc';
 all_from	'lib/Math/BigInt/FastCalc.pm';
 
 requires	'perl'			=> '5.006';
-requires	'Math::BigInt'		=> '1.999713';
+requires	'Math::BigInt'		=> '1.999714';
 requires	'Math::BigInt::Calc'	=> '1.999713';
 requires	'XSLoader'		=> '0';
 
