@@ -69,7 +69,7 @@ while (<DATA>) {
     } elsif ($f =~ /^(numify|length|as_number|as_hex|as_bin)$/) {
         $try .= qq| \$x->$f();|;
     } elsif ($f eq "bpi") {
-        $try .= ' $CLASS->bpi($x);';
+        $try .= qq| $CLASS->bpi(\$x);|;
     } elsif ($f eq "binc") {
         $try .= ' ++$x;';
     } elsif ($f eq "bdec") {
@@ -512,6 +512,7 @@ is($x, 2,
    q| $x <<= $y; $x->copy()->bfround(-9); $x >>= $y; $x|);
 
 __DATA__
+
 &bgcd
 inf:12:NaN
 -inf:12:NaN
@@ -539,6 +540,7 @@ abc:+0:NaN
 1034:804:2
 27:90:56:1
 27:90:54:9
+
 &blcm
 abc:abc:NaN
 abc:+0:NaN
@@ -549,6 +551,7 @@ abc:+0:NaN
 +27:+90:270
 +1034:+804:415668
 $div_scale = 40
+
 &bcos
 1.2:10:0.3623577545
 2.4:12:-0.737393715541
@@ -556,6 +559,7 @@ $div_scale = 40
 0:20:1
 1:10:0.5403023059
 1:12:0.540302305868
+
 &bsin
 1:10:0.8414709848
 0:10:0
@@ -564,37 +568,67 @@ $div_scale = 40
 1.2:13:0.9320390859672
 0.2:13:0.1986693307951
 3.2:12:-0.0583741434276
+
 &batan
 NaN:10:NaN
 inf:14:1.5707963267949
 -inf:14:-1.5707963267949
+0:14:0
+0:10:0
+0.1:14:0.099668652491162
 0.2:13:0.1973955598499
 0.2:14:0.19739555984988
-0:10:0
+0.5:14:0.46364760900081
 1:14:0.78539816339744
 -1:14:-0.78539816339744
-# test an argument X > 1
-2:14:1.1071487177941
+1.5:14:0.98279372324732
+2.0:14:1.1071487177941
+2.5:14:1.1902899496825
+3.0:14:1.2490457723982
+6.0:14:1.4056476493803
+12:14:1.4876550949064
+24:14:1.5291537476963
+48:14:1.5499660067587
+
 &batan2
+
 NaN:1:10:NaN
 NaN:NaN:10:NaN
 1:NaN:10:NaN
-inf:1:14:1.5707963267949
--inf:1:14:-1.5707963267949
-0:-inf:14:3.1415926535898
--1:-inf:14:-3.1415926535898
-1:-inf:14:3.1415926535898
-0:inf:14:0
-inf:-inf:14:2.3561944901923
+
 -inf:-inf:14:-2.3561944901923
-inf:+inf:14:0.7853981633974
--inf:+inf:14:-0.7853981633974
+-inf:-1:14:-1.5707963267949
+-inf:0:14:-1.5707963267949
+-inf:+1:14:-1.5707963267949
+-inf:+inf:14:-0.78539816339745
+
+-1:-inf:14:-3.1415926535898
+-1:-1:14:-2.3561944901923
+-1:0:14:-1.5707963267949
+-1:+1:14:-0.78539816339745
+-1:+inf:14:0
+
+0:-inf:14:3.1415926535898
+0:-1:14:3.1415926535898
+0:0:14:0
+0:+1:14:0
+0:+inf:14:0
+
++1:-inf:14:3.1415926535898
++1:-1:14:2.3561944901923
++1:0:14:1.5707963267949
++1:+1:14:0.78539816339745
++1:+inf:14:0
+
++inf:-inf:14:2.3561944901923
++inf:-1:14:1.5707963267949
++inf:0:14:1.5707963267949
++inf:+1:14:1.5707963267949
++inf:+inf:14:0.78539816339745
+
 1:5:13:0.1973955598499
 1:5:14:0.19739555984988
-0:0:10:0
-0:1:14:0
 0:2:14:0
-1:0:14:1.5707963267949
 5:0:14:1.5707963267949
 -1:0:11:-1.5707963268
 -2:0:77:-1.5707963267948966192313216916397514420985846996875529104874722961539082031431
@@ -603,16 +637,17 @@ inf:+inf:14:0.7853981633974
 1:5:14:0.19739555984988
 -1:8:14:-0.12435499454676
 1:8:14:0.12435499454676
--1:1:14:-0.78539816339744
 # test an argument X > 1 and one X < 1
 1:2:24:0.463647609000806116214256
 2:1:14:1.1071487177941
 -2:1:14:-1.1071487177941
+
 &bpi
 150:3.14159265358979323846264338327950288419716939937510582097494459230781640628620899862803482534211706798214808651328230664709384460955058223172535940813
 77:3.1415926535897932384626433832795028841971693993751058209749445923078164062862
 +0:3.141592653589793238462643383279502884197
 11:3.1415926536
+
 &bnok
 +inf:10:inf
 NaN:NaN:NaN
@@ -632,6 +667,7 @@ NaN:1:NaN
 2:0:1
 7:0:1
 2:1:2
+
 &blog
 0::-inf
 -1::NaN
@@ -663,6 +699,7 @@ $div_scale = 15
 # reset for further tests
 $div_scale = 40
 1::0
+
 &brsft
 NaNbrsft:2:NaN
 0:2:0
@@ -671,6 +708,7 @@ NaNbrsft:2:NaN
 4:1:2
 123:1:61.5
 32:3:4
+
 &blsft
 NaNblsft:0:NaN
 2:1:4
@@ -678,6 +716,7 @@ NaNblsft:0:NaN
 5:3:40
 1:2:4
 0:5:0
+
 &bnorm
 1:1
 -0:0
@@ -721,6 +760,7 @@ bnormNaN:NaN
 -00e+3:0
 -00e-03:0
 -00e+03:0
+
 &as_number
 0:0
 1:1
@@ -759,10 +799,12 @@ NaN:NaN
 0.1234567:0
 0.12345678:0
 0.123456789:0
+
 &binf
 1:+:inf
 2:-:-inf
 3:abc:inf
+
 &as_hex
 +inf:inf
 -inf:-inf
@@ -770,6 +812,7 @@ hexNaN:NaN
 0:0x0
 5:0x5
 -5:-0x5
+
 &as_bin
 +inf:inf
 -inf:-inf
@@ -777,6 +820,7 @@ hexNaN:NaN
 0:0b0
 5:0b101
 -5:-0b101
+
 &numify
 # uses bsstr() so 5 => 5e+0 to be compatible w/ Perls output
 0:0
@@ -785,11 +829,13 @@ hexNaN:NaN
 -5:-5
 100:100
 -100:-100
+
 &bnan
 abc:NaN
 2:NaN
 -2:NaN
 0:NaN
+
 &bone
 2:+:1
 -2:-:-1
@@ -799,6 +845,7 @@ abc:NaN
 -2::1
 abc::1
 2:abc:1
+
 &bsstr
 +inf:inf
 -inf:-inf
@@ -808,6 +855,7 @@ abcfsstr:NaN
 123:123e+0
 -5:-5e+0
 -100:-1e+2
+
 &bstr
 +inf:::inf
 -inf:::-inf
@@ -819,6 +867,7 @@ abcfstr:::NaN
 0.001234::-8:0.00123400
 0:4::0
 0::-4:0.0000
+
 &bnorm
 inf:inf
 +inf:inf
@@ -875,6 +924,7 @@ abc:NaN
   1.1e1:11
 -3e111:-3000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000
 -4e-1111:-0.0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000004
+
 &bpow
 NaN:1:NaN
 1:NaN:NaN
@@ -919,6 +969,7 @@ abc:123.456:NaN
 $div_scale = 20
 #62.5:12.5:26447206647554886213592.3959144
 $div_scale = 40
+
 &bneg
 bnegNaN:NaN
 +inf:-inf
@@ -930,6 +981,7 @@ bnegNaN:NaN
 -123456789:123456789
 +123.456789:-123.456789
 -123456.789:123456.789
+
 &babs
 babsNaN:NaN
 +inf:inf
@@ -941,6 +993,7 @@ babsNaN:NaN
 -123456789:123456789
 +123.456789:123.456789
 -123456.789:123456.789
+
 &bround
 $round_mode = "trunc"
 +inf:5:inf
@@ -1016,6 +1069,7 @@ $round_mode = "common"
 +601234300:6:601234000
 +60123456789.0123:5:60123000000
 -60123456789.0123:5:-60123000000
+
 &bfround
 $round_mode = "trunc"
 +inf:5:inf
@@ -1151,6 +1205,7 @@ $round_mode = "even"
 0.01234567:-8:0.01234567
 0.01234567:-9:0.012345670
 0.01234567:-12:0.012345670000
+
 &bcmp
 bcmpNaN:bcmpNaN:
 bcmpNaN:+0:
@@ -1223,6 +1278,7 @@ bcmpNaN:+0:
 NaN:inf:
 -inf:NaN:
 NaN:-inf:
+
 &bacmp
 bcmpNaN:bcmpNaN:
 bcmpNaN:+0:
@@ -1297,6 +1353,7 @@ bcmpNaN:+0:
 bacmpNaN:inf:
 -inf:bacmpNaN:
 bacmpNaN:-inf:
+
 &bdec
 bdecNaN:NaN
 +inf:inf
@@ -1312,6 +1369,7 @@ bdecNaN:NaN
 -99:-100
 -98:-99
 99:98
+
 &binc
 bincNaN:NaN
 +inf:inf
@@ -1326,6 +1384,7 @@ bincNaN:NaN
 -99:-98
 -101:-100
 99:100
+
 &badd
 abc:abc:NaN
 abc:+0:NaN
@@ -1373,6 +1432,7 @@ baddNaN:+inf:NaN
 -123456789:-987654321:-1111111110
 +123456789:-987654321:-864197532
 0.001234:0.0001234:0.0013574
+
 &bsub
 abc:abc:NaN
 abc:+0:NaN
@@ -1419,6 +1479,7 @@ baddNaN:+inf:NaN
 -123456789:+987654321:-1111111110
 -123456789:-987654321:864197532
 +123456789:-987654321:1111111110
+
 &bmuladd
 abc:abc:0:NaN
 abc:+0:0:NaN
@@ -1480,12 +1541,14 @@ NaNmul:-inf:0:NaN
 9999999999999999999:10000000000000000000:1234567890:99999999999999999990000000001234567890
 3.2:5.7:8.9:27.14
 -3.2:5.197:6.05:-10.5804
+
 &bmodpow
 3:4:8:1
 3:4:7:4
 3:4:7:4
 77777:777:123456789:99995084
 3.2:6.2:5.2:2.970579856718063040273642739529400818
+
 &bmul
 abc:abc:NaN
 abc:+0:NaN
@@ -1537,6 +1600,7 @@ NaNmul:-inf:NaN
 +99999999999:+9:899999999991
 6:120:720
 10:10000:100000
+
 &bdiv-list
 0:0:NaN,0
 0:1:0,0
@@ -1547,6 +1611,7 @@ NaNmul:-inf:NaN
 2.1:1:2.1,0
 -2.1:-1:2.1,0
 -2.1:1:-2.1,0
+
 &bdiv
 $div_scale = 40; $round_mode = "even"
 abc:abc:NaN
@@ -1624,6 +1689,7 @@ $div_scale = 1
 123456789.1234:1:100000000
 # reset scale for further tests
 $div_scale = 40
+
 &bmod
 +9:4:1
 +9:5:4
@@ -1714,6 +1780,7 @@ abc:1:abc:NaN
 3:1:0
 -3:-1:0
 3:-1:0
+
 &bfac
 Nanfac:NaN
 -1:NaN
@@ -1729,6 +1796,7 @@ Nanfac:NaN
 10:3628800
 11:39916800
 12:479001600
+
 &broot
 # sqrt()
 +0:2:0
@@ -1779,6 +1847,7 @@ NaN:inf:NaN
 16:4:2
 81:4:3
 # see t/bigroot() for more tests
+
 &bsqrt
 +0:0
 -1:NaN
@@ -1805,11 +1874,13 @@ nanbsqrt:NaN
 12:3.464101615137754587054892683011744733886
 0.49:0.7
 0.0049:0.07
+
 &is_nan
 123:0
 abc:1
 NaN:1
 -123:0
+
 &is_inf
 +inf::1
 -inf::1
@@ -1827,6 +1898,7 @@ NaN::0
 +inf:+inf:1
 +iNfInItY::1
 -InFiNiTy::1
+
 &is_odd
 abc:0
 0:0
@@ -1841,6 +1913,7 @@ abc:0
 123.45:0
 -123.45:0
 2:0
+
 &is_int
 NaNis_int:0
 0:1
@@ -1853,6 +1926,7 @@ NaNis_int:0
 123.4567:0
 -0.1:0
 -0.002:0
+
 &is_even
 abc:0
 0:1
@@ -1872,6 +1946,7 @@ abc:0
 120:1
 1200:1
 -1200:1
+
 &is_positive
 0:0
 1:1
@@ -1880,6 +1955,7 @@ abc:0
 NaN:0
 -inf:0
 +inf:1
+
 &is_negative
 0:0
 1:0
@@ -1888,6 +1964,7 @@ NaN:0
 NaN:0
 -inf:1
 +inf:0
+
 &parts
 0:0 0
 1:1 0
@@ -1897,6 +1974,7 @@ NaN:0
 NaNparts:NaN NaN
 +inf:inf inf
 -inf:-inf inf
+
 &exponent
 0:0
 1:0
@@ -1906,6 +1984,7 @@ NaNparts:NaN NaN
 +inf:inf
 -inf:inf
 NaNexponent:NaN
+
 &mantissa
 0:0
 1:1
@@ -1915,12 +1994,14 @@ NaNexponent:NaN
 +inf:inf
 -inf:-inf
 NaNmantissa:NaN
+
 &length
 123:3
 -123:3
 0:1
 1:1
 12345678901234567890:20
+
 &is_zero
 NaNzero:0
 +inf:0
@@ -1928,6 +2009,7 @@ NaNzero:0
 0:1
 -1:0
 1:0
+
 &is_one
 NaNone:0
 +inf:0
@@ -1937,6 +2019,7 @@ NaNone:0
 1:1
 -1:0
 -2:0
+
 &bfloor
 0:0
 abc:NaN
@@ -1951,6 +2034,7 @@ abc:NaN
 0.1234567:0
 0.12345678:0
 0.123456789:0
+
 &bceil
 0:0
 abc:NaN
@@ -1961,6 +2045,7 @@ abc:NaN
 -51.2:-51
 12.2:13
 -0.4:0
+
 &bint
 0:0
 NaN:NaN
@@ -1972,6 +2057,7 @@ NaN:NaN
 12.2:12
 -0.4:0
 # overloaded functions
+
 &log
 -1:NaN
 0:-inf
@@ -1983,11 +2069,19 @@ NaN:NaN
 -inf:inf
 inf:inf
 NaN:NaN
+
 &exp
+
 &sin
+
 &cos
+
 &atan2
+
 &int
+
 &neg
+
 &abs
+
 &sqrt
