@@ -1,5 +1,8 @@
 Revision history for Perl extension Math::BigInt::FastCalc.
 
+2016-01-03 v0.40 pjacklam
+  * Sync test files with Math-BigInt-1.999714.
+
 2015-12-31 v0.39 pjacklam
   * Sync test files with Math-BigInt-1.999713.
 
